MMA-7473 Forbedre Dokmet integrasjon