@@ -1,7 +1,5 @@
 package no.nav.dokdistfordeling.itest.config;
 
-import static no.nav.dokdistfordeling.config.cache.LokalCacheConfig.TKAT020_CACHE;
-
 import com.github.benmanes.caffeine.cache.Caffeine;
 import org.springframework.cache.CacheManager;
 import org.springframework.cache.caffeine.CaffeineCache;
@@ -10,8 +8,10 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
+
+import static no.nav.dokdistfordeling.config.cache.LokalCacheConfig.DOKMET_CACHE;
 
 @Configuration
 @Profile({"itest"})
@@ -20,8 +20,8 @@ public class LokalTestCacheConfig {
 	@Bean
 	CacheManager cacheManager() {
 		SimpleCacheManager manager = new SimpleCacheManager();
-		manager.setCaches(Arrays.asList(
-				new CaffeineCache(TKAT020_CACHE, Caffeine.newBuilder()
+		manager.setCaches(List.of(
+				new CaffeineCache(DOKMET_CACHE, Caffeine.newBuilder()
 						.expireAfterWrite(0, TimeUnit.MINUTES)
 						.maximumSize(0)
 						.build())
